[gd_scene load_steps=5 format=3 uid="uid://cii8dpj7hi0d3"]

[ext_resource type="Texture2D" uid="uid://d1t64l2ff1nd6" path="res://levels/common/gameover.png" id="1_3qo83"]
[ext_resource type="Script" path="res://levels/common/user_interface.gd" id="1_f84ne"]
[ext_resource type="FontFile" uid="uid://cu4lf4od2owng" path="res://levels/common/font/FlappyBird.ttf" id="2_44664"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bs27"]
bg_color = Color(1, 0.776471, 0.458824, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_f84ne")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 32

[node name="PointsLabel" type="Label" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_44664")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOverBox"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("1_3qo83")
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://levels/common/gameover.ase"
}

[node name="Panel" type="Panel" parent="MarginContainer/GameOverBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0bs27")

[node name="RestartButton" type="Button" parent="MarginContainer/GameOverBox/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -15.5
offset_right = 37.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_44664")
theme_override_font_sizes/font_size = 30
text = "RESTART"

[connection signal="pressed" from="MarginContainer/GameOverBox/Panel/RestartButton" to="." method="_on_restart_button_pressed"]
